[package]
name = "translit"
version = "0.4.1"
authors = ["Alexander Andreev <andreevlex.as@gmail.com>"]
description = "Transliteration for cyrillic languages that uses officially approved rules."
homepage = "https://github.com/andreevlex/translit-rs"
repository = "https://github.com/andreevlex/translit-rs"
documentation = "https://docs.rs/translit"
keywords = ["transliteration", "encoding"]
readme = "README.md"
license = "MIT"

exclude = [
    "appveyor.yml",
    ".travis.yml",
    ".gitignore",
]

[dependencies]


[[example]]
name = "web-gost779"